# coq

./: .bintray.json  .cvsignore  .depend  .depend.camlp4  .depend.camlp4.2  .depend.coq  .depend.coq7  .depend.newcoq  .dir-locals.el  .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  .merlin  .merlin.in  .ocamlformat  .ocamlformat-ignore  .ocamlinit  .ocp-indent  .travis.yml  .typerex  ANNONCE  Array.v  CHANGEMENTS  CHANGES  CHANGES.API  CHANGES.md  CODE_OF_CONDUCT.md  COMPATIBILITY  CONTRIBUTING.md  COPYRIGHT  COQ_VERSION  CREDITS  Constr.v  Control.v  Coq.bat  INSTALL  INSTALL.doc  INSTALL.ide  INSTALL.macosx  (+119 more)
boot/: dune  env.ml  env.mli  path.ml  path.mli  usage.ml  usage.mli  util.ml  util.mli
checker/: .depend  Makefile  analyze.ml  analyze.mli  check.ml  check.mli  check.mllib  checkFlags.ml  checkFlags.mli  checkInductive.ml  checkInductive.mli  checkLibrary.ml  checkLibrary.mli  checkTypes.ml  checkTypes.mli  check_stat.ml  check_stat.mli  checker.ml  checker.mli  checkerlib.mlpack  cic.mli  closure.ml  closure.mli  coqchk.mli  coqchk_main.ml  coqchk_main.mli  declarations.ml  declarations.mli  dune  environ.ml  environ.mli  esubst.ml  esubst.mli  include  indtypes.ml  indtypes.mli  inductive.ml  inductive.mli  mod_checking.ml  mod_checking.mli  (+29 more)
clib/: ancient.ml  ancient.mli  backtrace.ml  backtrace.mli  bigint.ml  bigint.mli  bitv_string.ml  bitv_string.mli  cArray.ml  cArray.mli  cEphemeron.ml  cEphemeron.mli  cInt.ml  cInt.mli  cList.ml  cList.mli  cMap.ml  cMap.mli  cObj.ml  cObj.mli  cOption.ml  cPath.ml  cPath.mli  cSet.ml  cSet.mli  cSig.mli  cStack.ml  cStack.mli  cString.ml  cString.mli  cThread.ml  cThread.mli  cUnix.ml  cUnix.mli  canary.ml  canary.mli  clib.mllib  deque.ml  deque.mli  diff2.ml  (+64 more)
config/: .cvsignore  Makefile  Makefile.template  config.mllib  coq_byte_config.mli  coq_config.ml  coq_config.mli  coq_mf_config.mli  dune  dune_config.ml  list_plugins.ml
coqpp/: coqpp.ml  coqpp_ast.mli  coqpp_lex.mli  coqpp_lex.mll  coqpp_main.ml  coqpp_main.mli  coqpp_parse.mly  coqpp_parser.ml  coqpp_parser.mli  dune
dev/: .cvsignore  Bugzilla_Coq_autolink.user.js  Coq_Bugzilla_autolink.user.js  Makefile  Makefile.common  Makefile.devel  Makefile.dir  Makefile.oug  Makefile.subdir  README  README.md  TODO  base_db  base_include  base_include.ml  bugzilla2github_stripped.csv  changements.txt  checker.dbg  checker_db  checker_dune_db  checker_printers.dbg  checker_printers.ml  checker_printers.mli  copy-cime  core.dbg  core_dune.dbg  db  db_printers.ml  deboguage.txt  debug_objects  debugger_support.ml  debugger_support.mli  debugging.txt  docintro  dune  dune-dbg.in  dune-workspace.all  dune-workspace.bisect  dune_db  dune_db_408  (+46 more)
grammar/: argextend.ml4  argextend.mlp  compat5.ml  compat5.mlp  compat5b.mlp  coqpp_ast.mli  coqpp_lex.mll  coqpp_main.ml  coqpp_parse.mly  dune  gramCompat.mlp  grammar.mllib  q_constr.ml4  q_constr.mlp  q_coqast.ml4  q_util.ml4  q_util.mli  q_util.mlp  tacextend.ml4  tacextend.mlp  vernacextend.ml4  vernacextend.mlp
ide/: .coqide-gtk2rc  .coqiderc  .cvsignore  .merlin  .merlin.in  FAQ  blaster_window.ml  command_windows.ml  command_windows.mli  config_lexer.mli  config_lexer.mll  config_parser.mly  configwin.ml  configwin.mli  configwin_ihm.ml  configwin_ihm.mli  configwin_messages.ml  configwin_types.ml  coq-ssreflect.lang  coq.lang  coq.ml  coq.mli  coqLex.mll  coqOps.ml  coqOps.mli  coq_commands.ml  coq_commands.mli  coq_icon.rc  coq_lex.mli  coq_lex.mll  coq_style.xml  coq_tactics.ml  coq_tactics.mli  coqide-gtk2rc  coqide.ml  coqide.mli  coqide.opam  coqide_QUARTZ.ml.in  coqide_WIN32.ml.in  coqide_X11.ml.in  (+106 more)
interp/: abbreviation.ml  abbreviation.mli  arguments_renaming.ml  arguments_renaming.mli  cbv.mli  coercionops.ml  coercionops.mli  constr_matching.mli  constrarg.ml  constrarg.mli  constrexpr.ml  constrexpr.mli  constrexpr_ops.ml  constrexpr_ops.mli  constrextern.ml  constrextern.mli  constrintern.ml  constrintern.mli  constrmetaintern.ml  constrmetainterp.ml  coqlib.ml  coqlib.mli  declare.ml  declare.mli  decls.ml  decls.mli  deprecation.ml  deprecation.mli  detyping.ml  discharge.ml  discharge.mli  doc.tex  dumpglob.ml  dumpglob.mli  dune  evardefine.ml  evarsolve.ml  find_subterm.ml  genarg.ml  genarg.mli  (+57 more)
kernel/: .cvsignore  .merlin.in  abstraction.ml  abstraction.mli  cClosure.ml  cClosure.mli  cPrimVal.ml  cPrimVal.mli  cPrimitives.ml  cPrimitives.mli  cbytecodes.ml  cbytecodes.mli  cbytegen.ml  cbytegen.mli  cemitcodes.ml  cemitcodes.mli  cime.ml  cime.mli  cinstr.mli  clambda.ml  clambda.mli  closure.ml  closure.mli  constant.ml  constant.mli  constant_typing.ml  constant_typing.mli  constr.ml  constr.mli  context.ml  context.mli  conv_oracle.ml  conv_oracle.mli  conversion.ml  conversion.mli  cooking.ml  cooking.mli  csymtable.ml  csymtable.mli  declarations.ml  (+214 more)
lib/: acyclicGraph.ml  acyclicGraph.mli  aux_file.ml  aux_file.mli  avoidSet.ml  avoidSet.mli  backtrace.ml  backtrace.mli  biassoc.ml  biassoc.mli  bigint.ml  bigint.mli  bignat.ml  bignat.mli  bij.ml  bij.mli  bstack.ml  bstack.mli  cArray.ml  cArray.mli  cAst.ml  cAst.mli  cDebug.ml  cDebug.mli  cEphemeron.ml  cEphemeron.mli  cErrors.ml  cErrors.mli  cList.ml  cList.mli  cMap.ml  cMap.mli  cObj.ml  cObj.mli  cProfile.ml  cProfile.mli  cSet.ml  cSet.mli  cSig.mli  cStack.ml  (+196 more)
parsing/: .cvsignore  argextend.ml4  ast.ml  ast.mli  astmod.ml  astmod.mli  astterm.ml  astterm.mli  cLexer.ml  cLexer.ml4  cLexer.mli  compat.ml4  coq_lexer.ml4  coq_lexer.mli  coqast.ml  coqast.mli  coqlib.ml  coqlib.mli  doc.tex  dune  egramcoq.ml  egramcoq.mli  egrammar.ml  egrammar.mli  egramml.ml  egramml.mli  entry.ml  entry.mli  esyntax.ml  esyntax.mli  extend.ml  extend.ml4  extend.mli  extrawit.ml  extrawit.mli  g_ascii_syntax.ml  g_basevernac.ml4  g_cases.ml4  g_command.ml4  g_constr.ml4  (+92 more)
perf/: coq_perf.c  dune  perf.c  perf.ml  perf.mli
pretyping/: EJudgment.ml  EvarMapMonad.ml  GADT.ml  arguments_renaming.ml  arguments_renaming.mli  astterm.ml  astterm.mli  autoBidi.ml  autoBidi.mli  cases.ml  cases.mli  cbn.ml  cbn.mli  cbv.ml  cbv.mli  class.ml  (+139 more)
(+14240 files in other folders)
