opam-version: "1.2"
maintainer: "The Coq development team <coqdev@inria.fr>"
authors: "The Coq development team, INRIA, CNRS, and contributors."
homepage: "https://coq.inria.fr/"
bug-reports: "https://github.com/coq/coq/issues"
dev-repo: "https://github.com/coq/coq.git"
license: "LGPL-2.1"

available: [ocaml-version >= "4.05.0"]

depends: [
  "dune"      { build & >= "1.2.0" }
  "coq"
]

build: [ [ "dune" "build" "-p" name "-j" jobs ] ]
