synopsis: "The Coq Proof Assistant"
description: """
Coq is a formal proof management system. It provides
a formal language to write mathematical definitions, executable
algorithms and theorems together with an environment for
semi-interactive development of machine-checked proofs.

This package provides the CoqIDE, a graphical user interface for the
development of interactive proofs.
"""
opam-version: "2.0"
maintainer: "The Coq development team <coqdev@inria.fr>"
authors: "The Coq development team, INRIA, CNRS, and contributors."
homepage: "https://coq.inria.fr/"
bug-reports: "https://github.com/coq/coq/issues"
dev-repo: "git+https://github.com/coq/coq.git"
license: "LGPL-2.1"

version: "dev"

depends: [
  "dune"                 { build & >= "1.10.0" }
  "coqide-server"        {          = version }
  "lablgtk3"             {         >= "3.0.beta5" }
  "lablgtk3-sourceview3" {         >= "3.0.beta5" }
]

build-env: [
  [ COQ_CONFIGURE_PREFIX = "%{prefix}" ]
]
build: [ [ "dune" "build" "-p" name "-j" jobs ] ]
