; Default flags for all Rocq libraries.
(env
 (dev     (flags :standard -w -9-27@60-69@70 \ -short-paths)
          (coq (flags :standard -w +default)))
 (release (flags :standard)
          (ocamlopt_flags :standard -O3 -unbox-closures))
 (ireport (flags :standard -w -9-27+60-70)
          (ocamlopt_flags :standard -O3 -unbox-closures -inlining-report)))

; Information about flags for release mode:
;
; In #9665 we tried to add (c_flags -O3) to the release setup,
; unfortunately the resulting VM seems to be slower [5% slower on
; fourcolor, thus we keep the default C flags for now, which seem to
; be -O2.

; The _ profile could help factoring the above, however it doesn't
; seem to work like we'd expect/like:
;
; (_ (flags :standard)))

(alias
 (name default)
 (deps rocq-runtime.install coq-core.install rocq-core.install coqide-server.install))

(alias
 (name runtime)
 (deps rocq-runtime.install coq-core.install))

(install
 (section lib)
 (package rocq-runtime)
 (files revision))

(rule
 (targets revision)
 (mode fallback)
 (deps (:rev-script dev/tools/make_git_revision.sh))
 (action (with-stdout-to revision (bash %{rev-script}))))

; bootstrap for theories/dune
(rule
 (targets theories_dune)
 (deps
  (source_tree plugins)
  (source_tree theories)
  (source_tree user-contrib)
  %{workspace_root}/_build/install/%{context_name}/lib/rocq-runtime/META)
 (action
  (with-stdout-to %{targets}
   (run tools/dune_rule_gen/gen_rules.exe Corelib theories %{env:COQ_DUNE_EXTRA_OPT=}))))

(rule
 (targets ltac2_dune)
 (deps
  (source_tree plugins)
  (source_tree theories)
  (source_tree user-contrib)
  %{workspace_root}/_build/install/%{context_name}/lib/rocq-runtime/META)
 (action
  (with-stdout-to %{targets}
   (run tools/dune_rule_gen/gen_rules.exe Ltac2 user-contrib/Ltac2 %{env:COQ_DUNE_EXTRA_OPT=}))))

(rule
 (targets theories_dune_split)
 (deps
  (source_tree plugins)
  (source_tree theories)
  (source_tree user-contrib))
 (action
  (with-stdout-to %{targets}
   (run tools/dune_rule_gen/gen_rules.exe Corelib theories -split %{env:COQ_DUNE_EXTRA_OPT=}))))

(rule
 (targets ltac2_dune_split)
 (deps
  (source_tree plugins)
  (source_tree theories)
  (source_tree user-contrib))
 (action
  (with-stdout-to %{targets}
   (run tools/dune_rule_gen/gen_rules.exe Ltac2 user-contrib/Ltac2 -split %{env:COQ_DUNE_EXTRA_OPT=}))))

; Use summary.log as the target
(alias
 (name runtest)
 (package coq)
 (deps test-suite/summary.log))

; For make compat
(alias
 (name all-src)
 (deps
  (source_tree user-contrib)
  (source_tree theories)
  (source_tree plugins)))

; (dirs (:standard _build_ci))
