; This library must have no dependencies except config, as it is a
; dependency for most Coq command line tools.
(library (lint (pps coqlint))
 (name boot)
 (public_name coq-core.boot)
 (synopsis "Coq Enviroment and Paths facilities")
 ; until ocaml/dune#4892 fixed
 ; (private_modules util)
 (libraries coq-core.config))
