; This library must have no dependencies except config, as it is a
; dependency for most Rocq command line tools.
(library
 (name boot)
 (public_name rocq-runtime.boot)
 (synopsis "Rocq Enviroment and Paths facilities")
 ; until ocaml/dune#4892 fixed
 ; (private_modules util)
 (libraries rocq-runtime.config))

(deprecated_library_name
 (old_public_name coq-core.boot)
 (new_public_name rocq-runtime.boot))
