; Careful with bug https://github.com/ocaml/odoc/issues/148
;
; If we don't pack checker we will have a problem here due to
; duplicate module names in the whole build.
(library
 (name coq_checklib)
 (public_name rocq-runtime.checklib)
 (synopsis "Rocq's Standalone Proof Checker")
 (modules :standard \ coqchk votour)
 (wrapped true)
 (libraries rocq-runtime.boot rocq-runtime.kernel))

(deprecated_library_name
 (old_public_name coq-core.checklib)
 (new_public_name rocq-runtime.checklib))

(executable
 (name coqchk)
 (public_name coqchk)
 (modes exe byte)
 ; Move to coq-checker?
 (package rocq-runtime)
 (modules coqchk)
 (flags :standard -open Coq_checklib)
 (libraries coq_checklib))

(executable
 (name votour)
 (public_name votour)
 (package rocq-runtime)
 (modules votour)
 (flags :standard -open Coq_checklib)
 (libraries coq_checklib))

