; Careful with bug https://github.com/ocaml/odoc/issues/148
;
; If we don't pack checker we will have a problem here due to
; duplicate module names in the whole build.
(library
 (name coq_checklib)
 (public_name rocq-runtime.checklib)
 (synopsis "Rocq's Standalone Proof Checker")
 (modules :standard \ rocqchk coqchk votour)
 (wrapped true)
 (libraries rocq-runtime.boot rocq-runtime.kernel))

(deprecated_library_name
 (old_public_name coq-core.checklib)
 (new_public_name rocq-runtime.checklib))

(executable
 (name rocqchk)
 (public_name rocqchk)
 (modes exe byte)
 (package rocq-runtime)
 (modules rocqchk)
 (flags :standard -open Coq_checklib)
 (libraries coq_checklib))

(executable
 (name coqchk)
 (public_name coqchk)
 (modes exe byte)
 (package coq-core)
 (modules coqchk)
 (flags :standard -open Coq_checklib)
 (libraries coq_checklib))

(executable
 (name votour)
 (public_name votour)
 (package rocq-runtime)
 (modules votour)
 (flags :standard -open Coq_checklib)
 (libraries coq_checklib))

