(library
 (name clib)
 (synopsis "Coq's Utility Library [general purpose]")
 (public_name coq-core.clib)
 (wrapped false)
 (modules_without_implementation cSig)
 (modules :standard \ unicodetable_gen)
 (libraries
  (select memprof_coq.ml from
   (!memprof-limits -> memprof_coq.std.ml)
   (memprof-limits -> memprof_coq.memprof.ml))
   str unix threads))

(executable
 (name unicodetable_gen)
 (modules unicodetable_gen))

(rule
 (targets unicodetable.ml)
 (deps (:gen ./unicodetable_gen.exe))
 (action (run %{gen} %{targets})))
