(library
 (name config)
 (synopsis "Coq Configuration Variables")
 (modules coq_config)
 (public_name coq.config)
 (modules :standard \ list_plugins)
 (wrapped false))

(executable (name list_plugins) (modules list_plugins))
(rule (targets plugin_list)
  (deps (source_tree %{project_root}/plugins))
  (action (with-stdout-to %{targets} (chdir %{project_root} (run config/list_plugins.exe)))))

; Dune doesn't use configure's output, but it is still necessary for
; some Coq files to work; will be fixed in the future.
(executable
 (name dune_config)
 (modules dune_config))

(rule
 (targets coq_config.ml coq_config.py dune.c_flags)
 (mode fallback)
 (deps
   %{project_root}/configure.ml
   %{project_root}/dev/ocamldebug-coq.run
   %{project_root}/dev/header.c
   ; Needed to generate include lists for coq_makefile
   plugin_list
  (env_var COQ_CONFIGURE_PREFIX))
 (action (run ./dune_config.exe --prefix %{env:COQ_CONFIGURE_PREFIX=../install/default/} --disable-native)))

; Used in test suite, could be removed
(rule
 (targets Makefile)
 (action (with-stdout-to %{targets} (echo "LOCAL=false"))))
