(ocamllex coqpp_lex)
(ocamlyacc coqpp_parse)

(library (lint (pps coqlint))
 (name coqpp)
 (wrapped false)
 (modules coqpp_ast coqpp_lex coqpp_parse coqpp_parser)
 (modules_without_implementation coqpp_ast))

(executable
 (name coqpp_main)
 (public_name coqpp)
 (package coq-core)
 (libraries coqpp)
 (modules coqpp_main))
