(ocamllex coqpp_lex)
(ocamlyacc coqpp_parse)

(library
 (name coqpp)
 (wrapped false)
 (modules coqpp_ast coqpp_lex coqpp_parse coqpp_parser)
 (modules_without_implementation coqpp_ast))

(executable
 (name coqpp_main)
 (public_name coqpp)
 (package rocq-runtime)
 (libraries coqpp)
 (modules coqpp_main))
