(ocamllex coqpp_lex)
(ocamlyacc coqpp_parse)

(library
 (name coqpp)
 (wrapped false)
 (modules :standard \ coqpp)
 (modules_without_implementation coqpp_ast))

; dune's coq.pp uses this,
; so if we put it in coq-core we can't use coq.pp for rocq-runtime
(executable
 (public_name coqpp)
 (empty_module_interface_if_absent)
 (package rocq-runtime)
 (libraries coqpp)
 (modules coqpp))
